# internal/response/record_response.go
@@ -4,7 +4,6 @@ import "time"
 
 type RecordCreatedData struct {
 	ID                  string    `json:"id" example:"1"`
-	IncidentTitle       string    `json:"incident_title" example:"Machine Error"`
 	IncidentDescription string    `json:"incident_description" example:"Description of the machine error"`
 	MachineModel        string    `json:"machine_model" example:"Model X"`
 	LightboxType        string    `json:"lightbox_type" example:"Type A"`
